中间件的用法

--- a/day03/public/index.html
+++ b/day03/public/index.html
@@ -10,5 +10,7 @@
     密码： <input type="password" name="password"> <br><br>
     <input type="submit" value="提交">
   </form>
+
+  <img src="http://localhost:3000" alt="图片">
 </body>
 </html>
