--- a/02_projectBuild/gulp_test/src/index.html
+++ b/02_projectBuild/gulp_test/src/index.html
@@ -3,8 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="./css/index.min.css">
 </head>
 <body>
-
+  <!--这是一段注释~~~~~~~~-->
+  <div id="box1">
+    <p>hello gulp</p>
+    <p>hello gulp</p>
+    <p>hello gulp</p>
+  </div>
+  <div id="box2">
+    <p>hello atguigu</p>
+    <p>hello atguigu</p>
+  </div>
+  <script type="text/javascript" src="./js/dist.min.js"></script>
 </body>
 </html>
