--- a/02_projectBuild/webpack_test/src/index.html
+++ b/02_projectBuild/webpack_test/src/index.html
@@ -5,6 +5,12 @@
   <title>webpack</title>
 </head>
 <body>
-
+  <div id="box1">
+    <p>hello webpack</p>
+  </div>
+  <div id="box2">
+    <p>hello atguigu</p>
+  </div>
+  <script type="text/javascript" src="../build/js/built.js"></script>
 </body>
 </html>
