dev环境的搭建

--- a/02_projectBuild/webpack_test/src/index.html
+++ b/02_projectBuild/webpack_test/src/index.html
@@ -6,9 +6,11 @@
 <body>
   <div id="box1">
     <p>hello webpack</p>
+    <p>hello webpack</p>
   </div>
   <div id="box2">
     <p>hello atguigu</p>
   </div>
+  <input type="text">
 </body>
 </html>
