--- a/03_react/1.react_test/work/03_component_basic/test.html
+++ b/03_react/1.react_test/work/03_component_basic/test.html
@@ -8,7 +8,9 @@
 
 <div id="test1"></div>
 <div id="test2"></div>
-
+<script type="text/javascript" src="../js/react.development.js"></script>
+<script type="text/javascript" src="../js/react-dom.development.js"></script>
+<script type="text/javascript" src="../js/babel.min.js"></script>
 <script type="text/babel">
 /*
 1. 自定义组件(Component) :
@@ -34,6 +36,37 @@
   2). 得到包含的虚拟DOM并解析为真实DOM
   3). 插入到指定的页面元素内部
 */
+
+  //工厂函数方式定义组件,定义简单的组件
+  //直接调用拿到返回值
+  function MyComponent1() {
+    console.log('MyComponent1()');
+    console.log(this);  //undefined
+    return <h1>MyComponent1</h1>;
+  }
+
+  //ES6 class 定义组件，定义复杂的组件，用的最多
+  //new 创建了实例对象，调用了实例对象render方法
+  class MyComponent2 extends React.Component {
+    constructor () {
+      super(); //继承父类属性和方法  super()方法之后才能创建this
+    }
+    render () {
+      console.log('MyComponent2()');
+      // console.log(this);  //实例对象
+      return (
+        <div>
+          <h1>MyComponent2</h1>
+          <p>hello</p>
+        </div>
+      )
+    }
+  }
+
+  //渲染组件
+  ReactDOM.render(<MyComponent1 />, document.getElementById('test1'));
+  ReactDOM.render(<MyComponent2 />, document.getElementById('test2'));
+
 
 </script>
 </body>
