--- a/03_react/1.react_test/work/04_component_state/test.html
+++ b/03_react/1.react_test/work/04_component_state/test.html
@@ -7,8 +7,10 @@
 <body>
 
 <div id="test"></div>
-
-<script type="text/javascript">
+<script type="text/javascript" src="../js/react.development.js"></script>
+<script type="text/javascript" src="../js/react-dom.development.js"></script>
+<script type="text/javascript" src="../js/babel.min.js"></script>
+<script type="text/babel">
   /*
   组件3大属性之: state属性
     1). 组件被称为"状态机", 通过更新组件的状态值来更新对应的页面显示(重新渲染)
@@ -40,6 +42,41 @@
     1. 显示h2标题, 初始文本为: 你喜欢我
     2. 点击标题更新为: 我喜欢你
   */
+
+  //定义组件
+  class Like extends React.Component {
+
+    constructor () {
+      super();
+      //初始化状态
+      this.state = {
+        isLike: true
+      }
+      //强制绑定函数的this指向
+      //bind并不会改变原来的函数，它会返回一个新的函数（此函数的this指向才被改变）
+      this.changeLike = this.changeLike.bind(this);
+    }
+    //定义事件的回调函数
+    changeLike () {
+      console.log(this); //默认undefined
+      //修改like的状态
+      //更新状态
+      this.setState({
+        isLike: !this.state.isLike
+      })
+    }
+
+    render () {
+      //获取状态
+      const {isLike} = this.state;
+      //通过this.changeLike才能拿到实例对象的方式
+      //通过在标签属性上写 onXxx 绑定事件
+      return <h1 onClick={this.changeLike}>{isLike ? '我喜欢你' : '你喜欢我'}</h1>;
+    }
+  }
+
+  //渲染组件
+  ReactDOM.render(<Like />, document.getElementById('test'));
 
 </script>
 </body>
