--- a/03_react/1.react_test/work/07_components_composing/demo.html
+++ b/03_react/1.react_test/work/07_components_composing/demo.html
@@ -21,6 +21,7 @@
 
   <script src="../js/react.development.js"></script>
   <script src="../js/react-dom.development.js"></script>
+  <script type="text/javascript" src="../js/prop-types.js"></script>
   <script src="../js/babel.min.js"></script>
   <script type="text/babel">
     /*
@@ -40,7 +41,103 @@
         TodoList 显示todo组件
       2. 分析数据存放的位置
         App
+      3. 实现功能
+        实现静态组件
+        实现动态组件
      */
+
+    //定义App组件
+    class App extends React.Component {
+      constructor (props) {
+        super(props);
+        //初始化状态
+        this.state = {
+          todoList: ['吃饭~', '睡觉~', '打豆豆~']
+        }
+        //强制绑定this指向
+        this.setTodo = this.setTodo.bind(this);
+      }
+
+      setTodo (todo) {
+        //获取当前的数据
+        let {todoList} = this.state;
+        //添加新数据
+        todoList.unshift(todo);
+        //更新状态
+        this.setState({todoList})
+      }
+
+      render () {
+        //获取状态
+        const {todoList} = this.state;
+        return (
+          <div>
+            <h2>Simple TODO List</h2>
+            <AddTodo setTodo={this.setTodo} length={todoList.length}/>
+            <TodoList todoList={todoList}/>
+          </div>
+        )
+      }
+    }
+
+    //定义AddTodo组件
+    class AddTodo extends React.Component {
+      constructor (props) {
+        super(props);
+        //强制绑定this
+        this.addTodo = this.addTodo.bind(this);
+      }
+
+      addTodo () {
+        //获取input输入框的值
+        const {value} = this.msg;
+        //过滤掉空的数据
+        if (value.trim()) {
+          //获取setTodo方法
+          const {setTodo} = this.props;
+          //添加数据
+          setTodo(value.trim());
+          //清空数据
+          this.msg.value = '';
+        }
+      }
+
+      render () {
+        //获取传入的长度
+        const {length} = this.props;
+        return (
+          <div>
+            <input type="text" ref={input => this.msg = input}/>
+            <button onClick={this.addTodo}>Add #{length}</button>
+          </div>
+        )
+      }
+    }
+
+    AddTodo.propTypes = {
+      setTodo: PropTypes.func.isRequired,
+      length: PropTypes.number.isRequired
+    }
+
+    //定义TodoList组件
+    class TodoList extends React.Component {
+      render () {
+        //接受props
+        const {todoList} = this.props;
+        return (
+          <ul>
+            {todoList.map((item, index) => <li key={index}>{item}</li>)}
+          </ul>
+        )
+      }
+    }
+
+    TodoList.propTypes = {
+      todoList: PropTypes.array.isRequired
+    }
+
+    //渲染组件
+    ReactDOM.render(<App />, document.getElementById('test'));
 
   </script>
 </body>
