--- a/03_react/1.react_test/work/08_component_controlled/test.html
+++ b/03_react/1.react_test/work/08_component_controlled/test.html
@@ -28,6 +28,38 @@
     2. 初始数据显示为atguigu
     3. 输入数据时, 下面的数据同步变化
   */
+  //定义组件
+  class App extends React.Component {
+    constructor () {
+      super();
+      //初始化状态
+      this.state = {
+        value: 'atguigu'
+      }
+      //修改this指向
+      this.handleChange = this.handleChange.bind(this);
+    }
+
+    handleChange (event) {
+      //获取用户输入数据
+      const {value} = event.target;
+      //更新状态
+      this.setState({value});
+    }
+
+    render () {
+      //获取状态
+      const {value} = this.state;
+      return (
+        <div>
+          <input type="text" value={value} onChange={this.handleChange}/>
+          <p>{value}</p>
+        </div>
+      )
+    }
+  }
+  //渲染组件
+  ReactDOM.render(<App />, document.getElementById('test'));
 
 </script>
 </body>
